objects/Laser_Ordered_Forms_Catalog_Numbers__c.object
<CustomObject>
    <description>Used by Laser group for setting up catalog numbers for Laser Ordered forms</description>
    <fields>
        <fullName>CAN__c</fullName>
        <label>CAN$</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Catalog_Number_Must_Be_Unique__c</fullName>
        <label>Catalog Number Must Be Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy/Sell Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Signature Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combining Fonts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom ELF Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom ELF Parts Inventory/Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom ELF Repair Order Invoicing/ERO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Rental Application (TSD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Download Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF Parts Inventory/Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF PColor Arts Inventory/Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF Repair Order Invoicing/ERO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Framework Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Maintenance Lease &amp; Rental (FMLR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory/Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Forms Printout (burn prep)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letterhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Porsche Inventory/Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Porsche RO Invoicing/ERO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision Framework Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisions Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisions Backers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisions Check Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisions Daily Rental (TSD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisions FMLR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisions Letterhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisions Parts</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conditional_A_R_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditional A/R Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If either of these are checked then those catalog numbers would exclude from the rollups.</description>
        <label>Exclude from Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_SO_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If either of these are checked then those catalog numbers would exclude from the rollups.</description>
        <label>Exclude from SO Total $</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Total_Number_Of_Forms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Total Number Of Forms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <label>Form Type</label>
        <picklist>
            <picklistValues>
                <fullName>A/P Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Check Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Open Item - Portrait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Statement (Can)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Statement (Lease)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Statement (Truck)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Statement (Type 1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Statement (Type 2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addtl Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addtl Proofs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B/O Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy/Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color A/P Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color A/P Check Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color A/R Statement (Can)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color A/R Statement (Lease)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color A/R Statement (Truck)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color A/R Statement (Type 1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color A/R Statement (Type 2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color B/O Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Cash Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Cust Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Custom Cust Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Custom Lease Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Custom Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Deal Jacket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Lease Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Letterhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color On Demand Check</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Category__c</fullName>
        <label>Main Category</label>
        <picklist>
            <picklistValues>
                <fullName>Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DASH Parts/Service/Accounting Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCAP Parts/Service/Accounting Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Showroom/Data Mapping/Framework/BuySell Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Parts/Service/Accounting Forms</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Edge_Notification_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Edge Notification Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>US__c</fullName>
        <label>US$</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ePayments_Notification_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ePayments Notification Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eSignature_Notification_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eSignature Notification Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Laser Ordered Forms Catalog Numbers</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Form_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Main_Category__c</columns>
        <columns>US__c</columns>
        <columns>CAN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <role>SystemAdministrator</role>
            <roleAndSubordinates>VPLaser</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Catalog Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Laser Ordered Forms Catalog Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>